add autocomplete ul with debounce function

--- a/src/SCSS/base.scss
+++ b/src/SCSS/base.scss
@@ -30,7 +30,7 @@ body.active {
 	--textColor: #121212;
 	--strokeColor: #c4c4c4;
 	--grayText: #666666;
-	--inputHover: #fff4e7;
+	--inputHover: #e0e0e0;
 	--strokeCard: #cfcfcf;
 }
 
