add responsive css to input and add clock

--- a/src/SCSS/base.scss
+++ b/src/SCSS/base.scss
@@ -22,6 +22,7 @@ body {
 	--accentHover: #fcc93d;
 	--inputHover: #111111;
 	--strokeCard: #262626;
+	--autocomplete: #3f3f3f;
 }
 
 body.active {
@@ -32,6 +33,7 @@ body.active {
 	--grayText: #666666;
 	--inputHover: #e0e0e0;
 	--strokeCard: #cfcfcf;
+	--autocomplete: #e0e0e0;
 }
 
 #app {
