--- a/src/SCSS/autocomplete.scss
+++ b/src/SCSS/autocomplete.scss
@@ -23,11 +23,10 @@
 
 		b {
 			font-weight: 900;
-			font-size: 1.1rem;
 		}
 
 		&:hover {
-			background-color: var(--inputHover);
+			background-color: var(--autocomplete);
 		}
 
 		&:last-child {
