--- a/src/SCSS/content.scss
+++ b/src/SCSS/content.scss
@@ -13,6 +13,7 @@
 		h2 {
 			color: var(--textColor);
 			font-size: 1.25rem;
+			width: max-content;
 		}
 
 		.container {
@@ -80,6 +81,7 @@
 				.date-container {
 					display: flex;
 					gap: 0.7rem;
+					width: max-content;
 
 					span {
 						color: var(--textColor);
@@ -325,6 +327,7 @@
 			border: none;
 
 			.wrapper {
+				overflow-y: hidden;
 				min-width: 0;
 				max-width: 1220px;
 				width: 100%;
